src/test/ui/error-codes/E0607.stderr
error[E0607]: cannot cast thin pointer `*const u8` to fat pointer `*const [u8]`
  --> $DIR/E0607.rs:13:5
   |
13 |     v as *const [u8]; //~ ERROR E0607
   |     ^^^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0607"
