src/test/ui/error-codes/E0607.rs
fn main() {
    let v = 0 as *const u8;
    v as *const [u8]; //~ ERROR E0607
}
